# stratosml

./: .gitignore  CMakeLists.txt  Makefile  README.md  compile_and_test.sh  make_compile_test.sh
src/stratosml/: CMakeLists.txt  Makefile  cmake_install.cmake  core.hpp  util.hpp
src/stratosml/core/activations/: activations.hpp
src/stratosml/core/autodiff/: autodiff.hpp  node.hpp  ops.hpp  tensor.hpp
src/stratosml/core/autodiff/nn/: activations.hpp  losses.hpp
src/stratosml/core/data/: data.hpp
src/stratosml/core/layers/: dense.hpp  layer.hpp  layers.hpp
src/stratosml/core/optimizers/: optimizers.hpp  schedules.hpp
src/stratosml/tests/: main.cpp
